<resources>
    <string name="app_name">RMVTS</string>
    <string name="title_activity_maps">Map</string>
    <string name="rmvts">RMVTS</string>
    <string name="ignition_status">IGNITION STATE</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="belum_memiliki_akun_klik">Don\'t have account? </string>
    <string name="disini">create account</string>
    <string name="sign_in">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="menu_map">MAP</string>
    <string name="menu_alarm_on">ALARM ON</string>
    <string name="menu_alarm_off">ALARM OFF</string>
    <string name="menu_ignition_on">Electricity ON</string>
    <string name="menu_ignition_off">Electricity OFF</string>
    <string name="menu_parking_on">PARKING ON</string>
    <string name="menu_parking_off">PARKING OFF</string>
    <string name="menu_gps_on">GPS ON</string>
    <string name="menu_gps_off">GPS OFF</string>
    <string name="state_off">OFF</string>
    <string name="state_on">ON</string>
    <string name="header_owner">Owner</string>
    <string name="header_plat_nomor">Plat Nomor</string>
    <string name="menu_log">LOG</string>
    <string name="menu_sign_out">Logout</string>
    <string name="togle_alarm">togle_alarm</string>
    <string name="togle_ignition">togle_ignition</string>
    <string name="togle_bottom_sheet">togle_bottom_sheet</string>
    <string name="parkir_on">Mode Parkir ON</string>
    <string name="parkir_off">Mode Parkir OFF</string>
    <string name="ignition_on">ACTIVE</string>
    <string name="ignition_off">Not ACTIVE</string>
    <string name="gps_off">Log Gps : OFF</string>
    <string name="gps_on">Log Gps : ON</string>
    <string name="nama_jalan">----</string>
    <string name="alamat_lengkap">--------</string>
    <string name="alarm_off">Alarm : OFF</string>
    <string name="alarm_on">Alarm : ON</string>
    <string name="mode_parkir">Mode Parkir --</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="bottom_dashboard">Dashboard</string>
    <string name="bottom_maps">Realtime Maps</string>
    <string name="bottom_your_location">Track Vehicle</string>
    <string name="bottom_capture">Snap Capture</string>
    <string name="bottom_log">Log Activity</string>
    <string name="log_vibration">Log Vibration</string>
    <string name="log_ignition">Log Ignition</string>
    <string name="profile">Profile</string>
    <string name="need_gps">Access GPS Required</string>
    <string name="dashboard">Dashboard</string>
    <string name="select_periode">Select Periode</string>
    <string name="already_have_account">Already have account?</string>
    <string name="owner">Owner</string>
    <string name="plate_number">Plate number</string>
    <string name="address">Address</string>
    <string name="vehicle_type">Vehicle type</string>
    <string name="press_button_to_take_the_picture_from_your_iot_device">Press button to take the picture from your IoT device</string>
    <string name="not_found">Location not found</string>
    <string name="detail_not_found">Detail location not found</string>
    <string name="take_snap_shot">Take Snap Shot</string>
    <string name="getting_data">Getting data image..</string>
    <string name="upload">Upload</string>
    <string name="log_camera">Log Camera</string>
    <string name="detail_image">Detail Image</string>
    <string name="authentication">Authentication</string>
    <string name="please_place_your_fingertip_on_the_scanner_to_verify_your_identity">Please place your fingertip on the scanner to verify your identity</string>
    <string name="you_need_to_take_authentication_before_enter_the_remote_menu_this_is_needed_for_security_reasons">You need to take authentication before enter the remote menu, this is needed for security reasons..</string>
    <string name="turn_on_ignition">Turn On Ignition</string>
    <string name="turn_on_ignition_dissable">Ignition is Turned OFF</string>
    <string name="turn_on_ignition_enable">Ignition is Turned ON</string>
    <string name="start">Start</string>
    <string name="use_password">Use Password</string>
    <string name="insert_login_password">Insert Login Password</string>
    <string name="submit">Submit</string>
    <string name="stop_real_time_gps">Stop Real-time GPS</string>
    <string name="start_real_time_gps">Start Real-time GPS</string>

</resources>
