<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/side_profile"
        android:icon="@drawable/ic_verifikasi"
        android:title="@string/profile" />
    <item
        android:id="@+id/side_log_ignition"
        android:icon="@drawable/icon_3"
        android:title="@string/log_ignition" />

    <item
        android:id="@+id/side_log_camera"
        android:icon="@drawable/ic_camera"
        android:title="@string/log_camera" />

    <item
        android:id="@+id/side_log_vibration"
        android:icon="@drawable/ic_vibration"
        android:title="@string/log_vibration" />

    <item
        android:id="@+id/side_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/menu_sign_out" />

</menu>