<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_layout"
    tools:context=".View.RegisterMenu.RegisterActivity">

    <ImageView
        android:id="@+id/layout_logo"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/beagle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="130dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_input_white_register"
            android:hint="@string/email"
            android:textSize="14sp"
            android:inputType="textEmailAddress"
            android:maxLines="1" />

        <EditText
            android:id="@+id/password"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_input_white_register"
            android:textSize="14sp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1" />

        <EditText
            android:id="@+id/owner"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_input_white_register"
            android:hint="@string/owner"
            android:textSize="14sp"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/plate_number"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_input_white_register"
            android:hint="@string/plate_number"
            android:textSize="14sp"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/address"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_input_white_register"
            android:hint="@string/address"
            android:textSize="14sp"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/vehicle_type"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_input_white_register"
            android:hint="@string/vehicle_type"
            android:textSize="14sp"
            android:inputType="text"
            android:maxLines="1" />

        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
            android:id="@+id/submit"
            android:layout_marginTop="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_button_beagle"
            app:spinning_bar_color="#FFF"
            app:spinning_bar_width="4dp"
            app:initialCornerAngle="48dp"
            app:finalCornerAngle="48dp"
            android:textColor="#FFF"
            android:layout_gravity="center"
            android:text="@string/disini"/>

        <LinearLayout
            android:id="@+id/layout_sigin"
            android:animateLayoutChanges="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            android:padding="2dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/already_have_account" />

            <TextView
                android:id="@+id/go_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/sign_in"
                android:textStyle="italic|bold" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>