<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_fingerprint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_default"
    tools:context=".View.ValidationMenu.ValidationActivity">

    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/icon"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="30dp"
            android:paddingTop="2dp"
            android:src="@drawable/ic_fingerprint" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:text="@string/authentication"
            android:textColor="#f5f5f5"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:gravity="center"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            android:text="@string/please_place_your_fingertip_on_the_scanner_to_verify_your_identity"
            android:textAlignment="center"
            android:textColor="#f5f5f5"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/errorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            android:textAlignment="center"
            android:textColor="#ff7878"
            android:textSize="14sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="26dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/you_need_to_take_authentication_before_enter_the_remote_menu_this_is_needed_for_security_reasons"
        android:textAlignment="center"
        android:textColor="#95aab4"
        android:textSize="14sp" />

</RelativeLayout>