<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    tools:context=".View.Dashboard.DashboardFragment">

    <RelativeLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/layout_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/background_box_white"
            android:paddingBottom="@dimen/activity_margin">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:contentDescription="@string/rmvts"
                android:src="@drawable/logo" />

            <TextClock
                android:id="@+id/textClock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:format24Hour="kk:mm:ss"
                android:textColor="#323232"
                android:textSize="12sp"
                android:textStyle="bold" />

            <com.hookedonplay.decoviewlib.DecoView
                android:id="@+id/dynamicArcView"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:background="@drawable/background_corner_circle_transparent"
                custom:dv_lineWidth="8dp" />

            <TextView
                android:id="@+id/mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/dynamicArcView"
                android:layout_marginTop="24dp"
                android:text="@string/mode_parkir"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mode"
                android:layout_marginTop="24dp"
                android:text="@string/nama_jalan"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/detail_alamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_alamat"
                android:text="@string/alamat_lengkap"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/btn_remote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:text="Control Vehicle"
                android:textColor="#FFF"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="10dp"
                android:padding="@dimen/activity_margin"
                android:layout_below="@+id/detail_alamat"
                android:background="@drawable/background_box_orange"/>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/status_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_top"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:padding="15dp"
            android:background="@drawable/background_box_white"
            android:layout_marginTop="15dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/text_gps"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Log Gps : -"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/text_alarm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Alarm : -"
                android:textAlignment="center" />

        </LinearLayout>
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:background="@xml/loading_proggress" />
</RelativeLayout>